# arch-lab

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
docs/: .gitignore  Makefile  lab.mk  public.md
docs/lab1/: lab1.md
docs/lab2/: lab2.md
docs/lab3/: lab3.md
docs/lab4/: lab4-层次存储系统分析-报告.docx
docs/tex/: .gitignore  Makefile  archreport.sty  getenv.sty  main.tex  markdown-languages.json
lab1/workspace/: .gitignore  Makefile  divide_by_zero_unix.c  insDependDist.cpp  insDependDist.csv  insDependDist2.cpp  inscount0.cpp  makefile.rules  paintInsDependDist.py  paint_insDependDist.py  paint_insDependDist2.py
lab1/workspace/Config/: makefile.config  makefile.default.rules  makefile.unix.config
lab2/: .gitignore  CMakeLists.txt  Makefile  xmake.lua
lab2/.run/: brchPredict.run.xml
lab2/cmake/: IntelPIN.cmake  IntelPin.cmake  cstdint
lab2/data/: brchPredict-bzip2.txt  brchPredict-coremark.exe.txt  brchPredict-sjeng.txt  brchPredict-sphinx3.txt  brchPredict-wrf.txt
lab2/data/ghr/: brchPredict-bzip2.txt  brchPredict-coremark.exe.txt  brchPredict-sphinx3.txt
lab2/scripts/: draw.py
lab2/src/: brchPredict.cpp  empty.cpp  main.cpp  pin_test.cpp  rusty_test.cpp  rusty_use_test.cpp  simple_test.cpp
lab2/src/include/: bridge.h
lab2/src/rusty_code/: Cargo.toml
lab2/src/rusty_code/src/: lib.rs
labs/: .gitignore  CMakeLists.txt  Makefile
labs/.run/: brchPredict.run.xml
labs/data/brchPredict/: brchPredict-wrf.txt
labs/data/brchPredict/ghr/: brchPredict-wrf.txt
labs/data/cacheModel/ALGO/: cacheModels-astar.txt  cacheModels-coremark.exe.txt  cacheModels-gcc.txt  cacheModels-tonto.txt  cacheModels-zeusmp.txt
labs/data/cacheModel/ASSO/: cacheModels-astar.txt  cacheModels-coremark.exe.txt  cacheModels-gcc.txt  cacheModels-tonto.txt  cacheModels-zeusmp.txt
labs/data/cacheModel/BLOCK/: cacheModels-astar.txt  cacheModels-coremark.exe.txt  cacheModels-gcc.txt  cacheModels-tonto.txt  cacheModels-zeusmp.txt
labs/data/cacheModel/CAPACITY/: cacheModels-astar.txt  cacheModels-coremark.exe.txt  cacheModels-gcc.txt  cacheModels-tonto.txt  cacheModels-zeusmp.txt
labs/data/cacheModel/PV/: cacheModels-astar.txt  cacheModels-coremark.exe.txt  cacheModels-gcc.txt  cacheModels-tonto.txt  cacheModels-zeusmp.txt
labs/data/cacheModel/algorithm/: cacheModels-bzip2.txt  cacheModels-coremark.exe.txt  cacheModels-sjeng.txt  cacheModels-sphinx3.txt  cacheModels-wrf.txt
labs/data/cacheModel/asso-nolimit/: cacheModels-bzip2.txt  cacheModels-coremark.exe.txt  cacheModels-sjeng.txt  cacheModels-sphinx3.txt  cacheModels-wrf.txt
labs/data/cacheModel/block_size/: cacheModels-bzip2.txt  cacheModels-coremark.exe.txt  cacheModels-sjeng.txt  cacheModels-sphinx3.txt  cacheModels-wrf.txt
labs/data/cacheModel/capacity/: cacheModels-bzip2.txt  cacheModels-coremark.exe.txt  cacheModels-sjeng.txt  cacheModels-sphinx3.txt  cacheModels-wrf.txt
labs/data/cacheModel/pv/: cacheModels-bzip2.txt  cacheModels-coremark.exe.txt  cacheModels-sjeng.txt  cacheModels-sphinx3.txt  cacheModels-wrf.txt
labs/data/cache_test/: cache_block.txt  cache_size.txt  cache_test.txt  cache_way.txt  tlb_size.txt
labs/data/ghr/: brchPredict-sjeng.txt
labs/scripts/: doxygen.config  draw.py  draw2.py
labs/src/: cacheModel.cpp  cache_test.cpp  cache_test_copy.cpp
